[tool.poetry]
name = "chepy"
version = "1.0.3"
description = ""
authors = ["Hapsida @securisec"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
base58 = "^1.0"
colorama = "^0.4.1"
crccheck = "^0.6.0"
docstring-parser = "^0.3.0"
emoji = "^0.5.4"
fire = "=0.2.1"
hashid = "^3.1"
hexdump = "^3.3"
jsonpath-rw = "^1.4"
jsonpickle = "^1.2"
parsel = "^1.5"
phpserialize = "^1.3"
Pillow = "^6.2"
prompt_toolkit = "=2.0.10"
pycipher = "^0.5.2"
pycryptodome = "^3.9"
pydash = "^4.7"
pyjwt = "^1.7"
pyOpenSSL = "^19.1"
pyperclip = "^1.7"
PyYAML = "^5.1"
regex = "^2019.11"
requests = "^2.22"
requests-toolbelt = "^0.9.1"
ua-parser = "^0.8.0"
ujson = "^1.35"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
